refactor(models): :truck: rename APISearchFilters -> APIFilters
